packages/react-tiny-toast/src/index.css
#react-tiny-toast-main-container {
  width: 100vw;
  height: 100vh;
  display: flex;
  flex-direction: column;
  flex-shrink: 0;
  position: fixed;
  z-index: -1;
  top: 0px;
  left: 0px;
}
.toast-container {
  z-index: 9999;
  position: absolute;
}
.toast-container.top-center {
  align-self: center;
}
.toast-container.top-left {
  align-self: flex-start;
}
.toast-container.top-right {
  align-self: flex-end;
}
.toast-container.bottom-center {
  align-self: center;
  bottom: 0px;
}
.toast-container.bottom-left {
  align-self: flex-start;
  bottom: 0px;
}
.toast-container.bottom-right {
  align-self: flex-end;
  bottom: 0px;
}
.toast-item {
  padding: 8px;
  margin: 2px;
  border-radius: 2px;
  -webkit-border-radius: 2px;
  -moz-border-radius: 2px;
  -ms-border-radius: 2px;
  -o-border-radius: 2px;
  -webkit-box-shadow: -4px -4px 16px -6px rgba(0,0,0,1);
  -moz-box-shadow: -4px -4px 16px -6px rgba(0,0,0,1);
  box-shadow: -4px -4px 16px -6px rgba(0,0,0,1);
}
.toast-item-success {
  background-color: #28a745;
}
.toast-item-danger {
  background-color: #dc3545;
}
.toast-item-default {
  background-color: #6c757d;
  color: #f8f9fa;
}
.toast-item-warning {
  background-color: #ffc107;
}

